working doxygen pdf output

--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -207,6 +207,18 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{md_doc_2README}
+\chapter{Data Structure Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Data Structure Documentation}
+\input{structspthread__fwd__args__st}
+\input{structspthread__meta__st}
+\input{structspthread__signal__args__st}
+\input{structspthread__st}
+\chapter{File Documentation}
+\input{spthread_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
