--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -1,5 +1,6 @@
 \doxysection{Data Structures}
 Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{structpcb__t}{pcb\+\_\+t}} \\*This structure stores all required information about a running process }{\pageref{structpcb__t}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structspthread__fwd__args__st}{spthread\+\_\+fwd\+\_\+args\+\_\+st}} }{\pageref{structspthread__fwd__args__st}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structspthread__meta__st}{spthread\+\_\+meta\+\_\+st}} }{\pageref{structspthread__meta__st}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structspthread__signal__args__st}{spthread\+\_\+signal\+\_\+args\+\_\+st}} }{\pageref{structspthread__signal__args__st}}{}
