--- a/doc/latex/d0/dd1/sched-demo_8c.tex
+++ b/doc/latex/d0/dd1/sched-demo_8c.tex
@@ -7,9 +7,13 @@
 {\ttfamily \#include $<$sys/time.\+h$>$}\newline
 {\ttfamily \#include $<$unistd.\+h$>$}\newline
 {\ttfamily \#include $<$stdbool.\+h$>$}\newline
-{\ttfamily \#include "{}./spthread.\+h"{}}\newline
+{\ttfamily \#include "{}util/spthread.\+h"{}}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
+\item 
+\#define \mbox{\hyperlink{sched-demo_8c_a3024ccd4a9af5109d24e6c57565d74a1}{\+\_\+\+POSIX\+\_\+\+C\+\_\+\+SOURCE}}~200809L
+\item 
+\#define \mbox{\hyperlink{sched-demo_8c_a8fb447618db946a9e2a596d9ea18763f}{\+\_\+\+DEFAULT\+\_\+\+SOURCE}}~1
 \item 
 \#define \mbox{\hyperlink{sched-demo_8c_a7735206bdfad487588bba2126b806ab7}{NUM\+\_\+\+THREADS}}~4
 \item 
@@ -25,6 +29,18 @@ int \mbox{\hyperlink{sched-demo_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (vo
 
 
 \doxysubsection{Macro Definition Documentation}
+\Hypertarget{sched-demo_8c_a8fb447618db946a9e2a596d9ea18763f}\label{sched-demo_8c_a8fb447618db946a9e2a596d9ea18763f} 
+\index{sched-\/demo.c@{sched-\/demo.c}!\_DEFAULT\_SOURCE@{\_DEFAULT\_SOURCE}}
+\index{\_DEFAULT\_SOURCE@{\_DEFAULT\_SOURCE}!sched-\/demo.c@{sched-\/demo.c}}
+\doxysubsubsection{\texorpdfstring{\_DEFAULT\_SOURCE}{\_DEFAULT\_SOURCE}}
+{\footnotesize\ttfamily \#define \+\_\+\+DEFAULT\+\_\+\+SOURCE~1}
+
+\Hypertarget{sched-demo_8c_a3024ccd4a9af5109d24e6c57565d74a1}\label{sched-demo_8c_a3024ccd4a9af5109d24e6c57565d74a1} 
+\index{sched-\/demo.c@{sched-\/demo.c}!\_POSIX\_C\_SOURCE@{\_POSIX\_C\_SOURCE}}
+\index{\_POSIX\_C\_SOURCE@{\_POSIX\_C\_SOURCE}!sched-\/demo.c@{sched-\/demo.c}}
+\doxysubsubsection{\texorpdfstring{\_POSIX\_C\_SOURCE}{\_POSIX\_C\_SOURCE}}
+{\footnotesize\ttfamily \#define \+\_\+\+POSIX\+\_\+\+C\+\_\+\+SOURCE~200809L}
+
 \Hypertarget{sched-demo_8c_a6821bafc3c88dfb2e433a095df9940c6}\label{sched-demo_8c_a6821bafc3c88dfb2e433a095df9940c6} 
 \index{sched-\/demo.c@{sched-\/demo.c}!BUF\_SIZE@{BUF\_SIZE}}
 \index{BUF\_SIZE@{BUF\_SIZE}!sched-\/demo.c@{sched-\/demo.c}}
