--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -213,6 +213,7 @@
 \chapter{File Index}
 \input{files}
 \chapter{Data Structure Documentation}
+\input{dc/d5f/structpcb__t}
 \input{de/db6/structspthread__fwd__args__st}
 \input{d0/d22/structspthread__meta__st}
 \input{d0/ddf/structspthread__signal__args__st}
