--- a/doc/latex/d8/d75/pennos_8c.tex
+++ b/doc/latex/d8/d75/pennos_8c.tex
@@ -1,2 +1,18 @@
 \doxysection{src/pennos.c File Reference}
 \hypertarget{pennos_8c}{}\label{pennos_8c}\index{src/pennos.c@{src/pennos.c}}
+{\ttfamily \#include $<$stdio.\+h$>$}\newline
+{\ttfamily \#include $<$stdlib.\+h$>$}\newline
+\doxysubsubsection*{Functions}
+\begin{DoxyCompactItemize}
+\item 
+int \mbox{\hyperlink{pennos_8c_a3c04138a5bfe5d72780bb7e82a18e627}{main}} (int argc, char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}argv)
+\end{DoxyCompactItemize}
+
+
+\doxysubsection{Function Documentation}
+\Hypertarget{pennos_8c_a3c04138a5bfe5d72780bb7e82a18e627}\label{pennos_8c_a3c04138a5bfe5d72780bb7e82a18e627} 
+\index{pennos.c@{pennos.c}!main@{main}}
+\index{main@{main}!pennos.c@{pennos.c}}
+\doxysubsubsection{\texorpdfstring{main()}{main()}}
+{\footnotesize\ttfamily int main (\begin{DoxyParamCaption}\item[{int}]{argc,  }\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{argv }\end{DoxyParamCaption})}
+
