--- a/doc/latex/db/d80/sys__call_8h.tex
+++ b/doc/latex/db/d80/sys__call_8h.tex
@@ -1,5 +1,6 @@
 \doxysection{src/util/sys\+\_\+call.h File Reference}
 \hypertarget{sys__call_8h}{}\label{sys__call_8h}\index{src/util/sys\_call.h@{src/util/sys\_call.h}}
+{\ttfamily \#include $<$unistd.\+h$>$}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
