--- a/doc/latex/d0/dd1/sched-demo_8c.tex
+++ b/doc/latex/d0/dd1/sched-demo_8c.tex
@@ -2,18 +2,20 @@
 \hypertarget{sched-demo_8c}{}\label{sched-demo_8c}\index{test/sched-\/demo.c@{test/sched-\/demo.c}}
 {\ttfamily \#include $<$pthread.\+h$>$}\newline
 {\ttfamily \#include $<$signal.\+h$>$}\newline
+{\ttfamily \#include $<$stdbool.\+h$>$}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$sys/time.\+h$>$}\newline
 {\ttfamily \#include $<$unistd.\+h$>$}\newline
-{\ttfamily \#include $<$stdbool.\+h$>$}\newline
-{\ttfamily \#include "{}util/spthread.\+h"{}}\newline
+{\ttfamily \#include "{}../src/util/spthread.\+h"{}}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
 \#define \mbox{\hyperlink{sched-demo_8c_a3024ccd4a9af5109d24e6c57565d74a1}{\+\_\+\+POSIX\+\_\+\+C\+\_\+\+SOURCE}}~200809L
 \item 
 \#define \mbox{\hyperlink{sched-demo_8c_a8fb447618db946a9e2a596d9ea18763f}{\+\_\+\+DEFAULT\+\_\+\+SOURCE}}~1
+\item 
+\#define \mbox{\hyperlink{sched-demo_8c_a78c99ffd76a7bb3c8c74db76207e9ab4}{\+\_\+\+XOPEN\+\_\+\+SOURCE}}~700
 \item 
 \#define \mbox{\hyperlink{sched-demo_8c_a7735206bdfad487588bba2126b806ab7}{NUM\+\_\+\+THREADS}}~4
 \item 
@@ -40,6 +42,12 @@ int \mbox{\hyperlink{sched-demo_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (vo
 \index{\_POSIX\_C\_SOURCE@{\_POSIX\_C\_SOURCE}!sched-\/demo.c@{sched-\/demo.c}}
 \doxysubsubsection{\texorpdfstring{\_POSIX\_C\_SOURCE}{\_POSIX\_C\_SOURCE}}
 {\footnotesize\ttfamily \#define \+\_\+\+POSIX\+\_\+\+C\+\_\+\+SOURCE~200809L}
+
+\Hypertarget{sched-demo_8c_a78c99ffd76a7bb3c8c74db76207e9ab4}\label{sched-demo_8c_a78c99ffd76a7bb3c8c74db76207e9ab4} 
+\index{sched-\/demo.c@{sched-\/demo.c}!\_XOPEN\_SOURCE@{\_XOPEN\_SOURCE}}
+\index{\_XOPEN\_SOURCE@{\_XOPEN\_SOURCE}!sched-\/demo.c@{sched-\/demo.c}}
+\doxysubsubsection{\texorpdfstring{\_XOPEN\_SOURCE}{\_XOPEN\_SOURCE}}
+{\footnotesize\ttfamily \#define \+\_\+\+XOPEN\+\_\+\+SOURCE~700}
 
 \Hypertarget{sched-demo_8c_a6821bafc3c88dfb2e433a095df9940c6}\label{sched-demo_8c_a6821bafc3c88dfb2e433a095df9940c6} 
 \index{sched-\/demo.c@{sched-\/demo.c}!BUF\_SIZE@{BUF\_SIZE}}
