forced doxygen + some additional documentation for kernel level calls

--- a/doc/latex/db/d80/sys__call_8h_source.tex
+++ b/doc/latex/db/d80/sys__call_8h_source.tex
@@ -19,6 +19,7 @@
 \DoxyCodeLine{00048\ }
 \DoxyCodeLine{00056\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{sys__call_8h_ac711d33fcf2573a590b224b6debab996}{s\_nice}}(pid\_t\ pid,\ \textcolor{keywordtype}{int}\ priority);}
 \DoxyCodeLine{00057\ }
-\DoxyCodeLine{00070\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{sys__call_8h_aec37528a3c7935864924764d1911126c}{s\_sleep}}(\textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ ticks);}
+\DoxyCodeLine{00058\ }
+\DoxyCodeLine{00071\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{sys__call_8h_aec37528a3c7935864924764d1911126c}{s\_sleep}}(\textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ ticks);}
 
 \end{DoxyCode}
