--- a/doc/latex/dc/d5f/structpcb__t.tex
+++ b/doc/latex/dc/d5f/structpcb__t.tex
@@ -12,7 +12,7 @@ This structure stores all required information about a running process.
 \doxysubsubsection*{Data Fields}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{structspthread__st}{spthread\+\_\+st}} \mbox{\hyperlink{structpcb__t_a190c3857c9ed42aa1a0e967eb47e574a}{handle}}
+\mbox{\hyperlink{spthread_8h_ad5cf274963820ab3f4c332683445ca8d}{spthread\+\_\+t}} \mbox{\hyperlink{structpcb__t_a77c89dc39ec87e1fd4cd589e2e64cc67}{handle}}
 \begin{DoxyCompactList}\small\item\em This stores a handle to the spthread. ~\newline
  \end{DoxyCompactList}\item 
 pid\+\_\+t \mbox{\hyperlink{structpcb__t_afa909915326969a57c5c1bd8b43954d4}{pid}}
@@ -27,11 +27,11 @@ int \mbox{\hyperlink{structpcb__t_ad70cf1a6bd13085e99d0cce7eae3afc9}{priority}}
 This structure stores all required information about a running process. 
 
 \doxysubsection{Field Documentation}
-\Hypertarget{structpcb__t_a190c3857c9ed42aa1a0e967eb47e574a}\label{structpcb__t_a190c3857c9ed42aa1a0e967eb47e574a} 
+\Hypertarget{structpcb__t_a77c89dc39ec87e1fd4cd589e2e64cc67}\label{structpcb__t_a77c89dc39ec87e1fd4cd589e2e64cc67} 
 \index{pcb\_t@{pcb\_t}!handle@{handle}}
 \index{handle@{handle}!pcb\_t@{pcb\_t}}
 \doxysubsubsection{\texorpdfstring{handle}{handle}}
-{\footnotesize\ttfamily \mbox{\hyperlink{structspthread__st}{spthread\+\_\+st}} pcb\+\_\+t\+::handle}
+{\footnotesize\ttfamily \mbox{\hyperlink{spthread_8h_ad5cf274963820ab3f4c332683445ca8d}{spthread\+\_\+t}} pcb\+\_\+t\+::handle}
 
 
 
