--- a/doc/latex/d0/daa/kernel_8h_source.tex
+++ b/doc/latex/d0/daa/kernel_8h_source.tex
@@ -3,7 +3,7 @@
 \mbox{\hyperlink{kernel_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{spthread_8h}{spthread.h}}"{}}}
-\DoxyCodeLine{00002\ }
+\DoxyCodeLine{00002\ \textcolor{preprocessor}{\#include\ <sys/types.h>}\ \textcolor{comment}{//needed\ for\ ssize\_t,\ if\ we\ use\ ints,\ can\ remove}}
 \DoxyCodeLine{00011\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{enum}\ \{}
 \DoxyCodeLine{00012\ \ \ \ \ \mbox{\hyperlink{kernel_8h_ab97efa0d1c4aeaf55ff756bf16685854a1061be6c3fb88d32829cba6f6b2be304}{RUNNING}},\ \ }
 \DoxyCodeLine{00016\ \ \ \ \ \mbox{\hyperlink{kernel_8h_ab97efa0d1c4aeaf55ff756bf16685854a948b2aee15f52b421fa4770c47bcfe8c}{STOPPED}},\ \ }
@@ -11,20 +11,52 @@
 \DoxyCodeLine{00026\ \ \ \ \ \mbox{\hyperlink{kernel_8h_ab97efa0d1c4aeaf55ff756bf16685854acfa05d5a2f18cf6a5976178d9949c512}{ZOMBIED}}\ \ \ }
 \DoxyCodeLine{00031\ \}\ \mbox{\hyperlink{kernel_8h_ab97efa0d1c4aeaf55ff756bf16685854}{process\_state\_t}};}
 \DoxyCodeLine{00032\ }
-\DoxyCodeLine{00033\ }
-\DoxyCodeLine{00038\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ \{}
-\DoxyCodeLine{00039\ \ \ \ \ \mbox{\hyperlink{structspthread__st}{spthread\_st}}\ \mbox{\hyperlink{structpcb__t_a190c3857c9ed42aa1a0e967eb47e574a}{handle}};\ }
-\DoxyCodeLine{00040\ \ \ \ \ pid\_t\ \mbox{\hyperlink{structpcb__t_afa909915326969a57c5c1bd8b43954d4}{pid}};\ }
-\DoxyCodeLine{00041\ \ \ \ \ pid\_t\ \mbox{\hyperlink{structpcb__t_ab2289d15508ab3188ef4276b93270eb9}{ppid}};\ }
-\DoxyCodeLine{00042\ \ \ \ \ \textcolor{comment}{//\ need\ to\ store\ child\ pids}}
-\DoxyCodeLine{00043\ \ \ \ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structpcb__t_ad70cf1a6bd13085e99d0cce7eae3afc9}{priority}};\ }
-\DoxyCodeLine{00044\ \ \ \ \ \textcolor{comment}{//\ need\ to\ store\ all\ open\ file\ descriptors}}
-\DoxyCodeLine{00045\ \}\ \mbox{\hyperlink{kernel_8h_a71acfdbc74942780681d06efcc05a0a5}{pcb\_t}};}
-\DoxyCodeLine{00046\ }
+\DoxyCodeLine{00033\ \ }
+\DoxyCodeLine{00034\ }
+\DoxyCodeLine{00039\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ \{}
+\DoxyCodeLine{00040\ \ \ \ \ \mbox{\hyperlink{structspthread__st}{spthread\_t}}\ \mbox{\hyperlink{structpcb__t_a77c89dc39ec87e1fd4cd589e2e64cc67}{handle}};\ }
+\DoxyCodeLine{00041\ \ \ \ \ pid\_t\ \mbox{\hyperlink{structpcb__t_afa909915326969a57c5c1bd8b43954d4}{pid}};\ }
+\DoxyCodeLine{00042\ \ \ \ \ pid\_t\ \mbox{\hyperlink{structpcb__t_ab2289d15508ab3188ef4276b93270eb9}{ppid}};\ }
+\DoxyCodeLine{00043\ \ \ \ \ \textcolor{comment}{//\ need\ to\ store\ child\ pids}}
+\DoxyCodeLine{00044\ \ \ \ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{structpcb__t_ad70cf1a6bd13085e99d0cce7eae3afc9}{priority}};\ }
+\DoxyCodeLine{00045\ \ \ \ \ \textcolor{comment}{//\ need\ to\ store\ all\ open\ file\ descriptors}}
+\DoxyCodeLine{00046\ \}\ \mbox{\hyperlink{kernel_8h_a71acfdbc74942780681d06efcc05a0a5}{pcb\_t}};}
 \DoxyCodeLine{00047\ }
-\DoxyCodeLine{00053\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3}{k\_proc\_create}}(\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ *parent);}
-\DoxyCodeLine{00054\ }
-\DoxyCodeLine{00061\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{kernel_8h_a87071d3f59ebc0d6f626c885eb27c27e}{k\_proc\_cleanup}}(\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ *proc);}
-\DoxyCodeLine{00062\ }
+\DoxyCodeLine{00048\ }
+\DoxyCodeLine{00054\ \mbox{\hyperlink{structpcb__t}{pcb\_t}}*\ \mbox{\hyperlink{kernel_8h_a736760f5a73bbd7d6c9e4607c49837a3}{k\_proc\_create}}(\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ *parent);}
+\DoxyCodeLine{00055\ }
+\DoxyCodeLine{00062\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{kernel_8h_a87071d3f59ebc0d6f626c885eb27c27e}{k\_proc\_cleanup}}(\mbox{\hyperlink{structpcb__t}{pcb\_t}}\ *proc);}
+\DoxyCodeLine{00063\ }
+\DoxyCodeLine{00064\ }
+\DoxyCodeLine{00065\ }
+\DoxyCodeLine{00066\ }
+\DoxyCodeLine{00067\ }
+\DoxyCodeLine{00068\ }
+\DoxyCodeLine{00069\ \textcolor{comment}{/************************************************}}
+\DoxyCodeLine{00070\ \textcolor{comment}{\ *\ \ PENNFAT\ KERNEL\ LEVEL\ FUNCTIONS}}
+\DoxyCodeLine{00071\ \textcolor{comment}{\ ***********************************************/}}
+\DoxyCodeLine{00072\ }
+\DoxyCodeLine{00073\ }
+\DoxyCodeLine{00074\ }
+\DoxyCodeLine{00103\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{kernel_8h_a4d2cf4232cddee738996ca9ad83ea56f}{k\_open}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}\ *fname,\ \textcolor{keywordtype}{int}\ mode);}
+\DoxyCodeLine{00104\ }
+\DoxyCodeLine{00105\ }
+\DoxyCodeLine{00114\ ssize\_t\ \mbox{\hyperlink{kernel_8h_a1951ec11865274b45144d6dd6f878692}{k\_read}}(\textcolor{keywordtype}{int}\ fd,\ \textcolor{keywordtype}{int}\ n,\ \textcolor{keywordtype}{char}\ *buf);}
+\DoxyCodeLine{00115\ }
+\DoxyCodeLine{00116\ }
+\DoxyCodeLine{00117\ }
+\DoxyCodeLine{00118\ ssize\_t\ \mbox{\hyperlink{kernel_8h_a79d2a9b65d0e04de358fe1a2cfa79baf}{k\_write}}(\textcolor{keywordtype}{int}\ fd,\ \textcolor{keyword}{const}\ \textcolor{keywordtype}{char}\ *str,\ \textcolor{keywordtype}{int}\ n);}
+\DoxyCodeLine{00119\ }
+\DoxyCodeLine{00120\ }
+\DoxyCodeLine{00121\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{kernel_8h_a9ecd38dc6f3a9721ab53ff9a815b5480}{k\_close}}(\textcolor{keywordtype}{int}\ fd);}
+\DoxyCodeLine{00122\ }
+\DoxyCodeLine{00123\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{kernel_8h_ae8b44b3621ebb542bec49f73d19d2885}{k\_unlink}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}\ *fname);}
+\DoxyCodeLine{00124\ }
+\DoxyCodeLine{00125\ off\_t\ \mbox{\hyperlink{kernel_8h_a332b4729ef52b2a3132b1aea88fa5c96}{k\_lseek}}(\textcolor{keywordtype}{int}\ fd,\ \textcolor{keywordtype}{int}\ offset,\ \textcolor{keywordtype}{int}\ whence);}
+\DoxyCodeLine{00126\ }
+\DoxyCodeLine{00127\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{kernel_8h_a9317fe11a36bfc2d731bcbacc3a57728}{k\_ls}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}\ *filename);}
+\DoxyCodeLine{00128\ }
+\DoxyCodeLine{00129\ }
+\DoxyCodeLine{00130\ }
 
 \end{DoxyCode}
