--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -207,7 +207,9 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\input{d3/d87/md_doc_2README}
+\input{index}
+\input{d2/dd4/md_doc_2fat}
+\input{d2/d2d/md_doc_2kernel}
 \chapter{Data Structure Index}
 \input{annotated}
 \chapter{File Index}
@@ -228,6 +230,8 @@
 \input{d0/ddf/structspthread__signal__args__st}
 \input{d6/dad/structspthread__st}
 \chapter{File Documentation}
+\input{d1/d4c/fat_8md}
+\input{d1/d56/kernel_8md}
 \input{da/ddd/README_8md}
 \input{d4/d1d/penn-parser_8c}
 \input{d7/da1/penn-parser_8h}
