fixed issues with global processes and current process variable

--- a/doc/latex/d3/d2d/pennos_8h.tex
+++ b/doc/latex/d3/d2d/pennos_8h.tex
@@ -5,6 +5,8 @@
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$unistd.\+h$>$}\newline
 {\ttfamily \#include "{}penn-\/parser.\+h"{}}\newline
+{\ttfamily \#include "{}util/globals.\+h"{}}\newline
+{\ttfamily \#include "{}util/kernel.\+h"{}}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
