--- a/doc/latex/d3/d2d/pennos_8h_source.tex
+++ b/doc/latex/d3/d2d/pennos_8h_source.tex
@@ -24,7 +24,9 @@
 \DoxyCodeLine{00020\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
 \DoxyCodeLine{00021\ \textcolor{preprocessor}{\#include\ <unistd.h>}}
 \DoxyCodeLine{00022\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{penn-parser_8h}{penn-\/parser.h}}"{}}}
-\DoxyCodeLine{00023\ }
-\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00023\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{globals_8h}{util/globals.h}}"{}}}
+\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{kernel_8h}{util/kernel.h}}"{}}}
+\DoxyCodeLine{00025\ }
+\DoxyCodeLine{00026\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
