--- a/doc/latex/db/d80/sys__call_8h.tex
+++ b/doc/latex/db/d80/sys__call_8h.tex
@@ -1,7 +1,10 @@
 \doxysection{src/util/sys\+\_\+call.h File Reference}
 \hypertarget{sys__call_8h}{}\label{sys__call_8h}\index{src/util/sys\_call.h@{src/util/sys\_call.h}}
 {\ttfamily \#include $<$stdbool.\+h$>$}\newline
+{\ttfamily \#include $<$string.\+h$>$}\newline
 {\ttfamily \#include $<$unistd.\+h$>$}\newline
+{\ttfamily \#include "{}globals.\+h"{}}\newline
+{\ttfamily \#include "{}kernel.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
