--- a/doc/latex/dir_b7878ad5ecbf2506f4125b9d34c97e45.tex
+++ b/doc/latex/dir_b7878ad5ecbf2506f4125b9d34c97e45.tex
@@ -15,6 +15,10 @@ file \mbox{\hyperlink{clinkedlist_8c}{clinkedlist.\+c}}
 \item 
 file \mbox{\hyperlink{clinkedlist_8h}{clinkedlist.\+h}}
 \item 
+file \mbox{\hyperlink{globals_8c}{globals.\+c}}
+\item 
+file \mbox{\hyperlink{globals_8h}{globals.\+h}}
+\item 
 file \mbox{\hyperlink{kernel_8c}{kernel.\+c}}
 \item 
 file \mbox{\hyperlink{kernel_8h}{kernel.\+h}}
