--- a/doc/latex/files.tex
+++ b/doc/latex/files.tex
@@ -13,6 +13,8 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{bitmap_8h}{bitmap.\+h}} }{\pageref{bitmap_8h}}{}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{clinkedlist_8c}{clinkedlist.\+c}} }{\pageref{clinkedlist_8c}}{}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{clinkedlist_8h}{clinkedlist.\+h}} }{\pageref{clinkedlist_8h}}{}
+\item\contentsline{section}{src/util/\mbox{\hyperlink{globals_8c}{globals.\+c}} }{\pageref{globals_8c}}{}
+\item\contentsline{section}{src/util/\mbox{\hyperlink{globals_8h}{globals.\+h}} }{\pageref{globals_8h}}{}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{kernel_8c}{kernel.\+c}} }{\pageref{kernel_8c}}{}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{kernel_8h}{kernel.\+h}} }{\pageref{kernel_8h}}{}
 \item\contentsline{section}{src/util/\mbox{\hyperlink{pennfat__kernel_8c}{pennfat\+\_\+kernel.\+c}} }{\pageref{pennfat__kernel_8c}}{}
