--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -252,6 +252,9 @@
 \input{dd/dc7/clinkedlist_8c}
 \input{d7/d12/clinkedlist_8h}
 \input{d7/d12/clinkedlist_8h_source}
+\input{db/d28/globals_8c}
+\input{d5/d87/globals_8h}
+\input{d5/d87/globals_8h_source}
 \input{d9/d26/kernel_8c}
 \input{d0/daa/kernel_8h}
 \input{d0/daa/kernel_8h_source}
