working scheduler with s_spawn

--- a/doc/latex/d3/d2d/pennos_8h.tex
+++ b/doc/latex/d3/d2d/pennos_8h.tex
@@ -7,6 +7,7 @@
 {\ttfamily \#include "{}penn-\/parser.\+h"{}}\newline
 {\ttfamily \#include "{}util/globals.\+h"{}}\newline
 {\ttfamily \#include "{}util/kernel.\+h"{}}\newline
+{\ttfamily \#include "{}util/sys\+\_\+call.\+h"{}}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
