--- a/doc/latex/d8/d74/sys__call_8c.tex
+++ b/doc/latex/d8/d74/sys__call_8c.tex
@@ -1,6 +1,7 @@
 \doxysection{src/util/sys\+\_\+call.c File Reference}
 \hypertarget{sys__call_8c}{}\label{sys__call_8c}\index{src/util/sys\_call.c@{src/util/sys\_call.c}}
 {\ttfamily \#include "{}sys\+\_\+call.\+h"{}}\newline
+{\ttfamily \#include "{}stdio.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
