--- a/doc/latex/d9/d26/kernel_8c.tex
+++ b/doc/latex/d9/d26/kernel_8c.tex
@@ -1,6 +1,7 @@
 \doxysection{src/util/kernel.c File Reference}
 \hypertarget{kernel_8c}{}\label{kernel_8c}\index{src/util/kernel.c@{src/util/kernel.c}}
 {\ttfamily \#include "{}kernel.\+h"{}}\newline
+{\ttfamily \#include "{}stdio.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
