--- a/doc/latex/d3/d2d/pennos_8h.tex
+++ b/doc/latex/d3/d2d/pennos_8h.tex
@@ -1,5 +1,6 @@
 \doxysection{src/pennos.h File Reference}
 \hypertarget{pennos_8h}{}\label{pennos_8h}\index{src/pennos.h@{src/pennos.h}}
+{\ttfamily \#include $<$fcntl.\+h$>$}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include "{}parser.\+h"{}}\newline
