--- a/doc/latex/db/d80/sys__call_8h.tex
+++ b/doc/latex/db/d80/sys__call_8h.tex
@@ -180,7 +180,7 @@ ssize\+\_\+t
 
 Suspends execution of the calling proces for a specified number of clock ticks. 
 
-This function is analogous to {\ttfamily sleep(3)} in Linux, with the behavior that the system clock continues to tick even if the call is interrupted. The sleep can be interrupted by a P\+\_\+\+SIGTERM signal, after which the function will return prematurely.
+This function is analogous to {\ttfamily \doxylink{shellbuiltins_8h_acc8612feeec5f569b1e096e3110d0dca}{sleep(3)}} in Linux, with the behavior that the system clock continues to tick even if the call is interrupted. The sleep can be interrupted by a P\+\_\+\+SIGTERM signal, after which the function will return prematurely.
 
 
 \begin{DoxyParams}{Parameters}
