--- a/doc/latex/d8/d75/pennos_8c.tex
+++ b/doc/latex/d8/d75/pennos_8c.tex
@@ -2,14 +2,16 @@
 \hypertarget{pennos_8c}{}\label{pennos_8c}\index{src/pennos.c@{src/pennos.c}}
 {\ttfamily \#include "{}pennos.\+h"{}}\newline
 {\ttfamily \#include $<$signal.\+h$>$}\newline
+{\ttfamily \#include "{}fcntl.\+h"{}}\newline
 {\ttfamily \#include "{}parser.\+h"{}}\newline
 {\ttfamily \#include "{}pennfat.\+h"{}}\newline
+{\ttfamily \#include "{}unistd.\+h"{}}\newline
 {\ttfamily \#include "{}util/kernel.\+h"{}}\newline
 {\ttfamily \#include "{}util/prioritylist.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{pennos_8c_a9fa00b0be5d3c4781048861e2506eb63}{scheduler}} (void)
+void \mbox{\hyperlink{pennos_8c_a9e5f6827ba0dd8849e892ef8f2187386}{scheduler}} (char \texorpdfstring{$\ast$}{*}logfile)
 \item 
 void \mbox{\hyperlink{pennos_8c_a3aaa3b35330e32fa9b4f1150064c6579}{cancel\+\_\+and\+\_\+join}} (\mbox{\hyperlink{spthread_8h_ad5cf274963820ab3f4c332683445ca8d}{spthread\+\_\+t}} thread)
 \item 
@@ -35,11 +37,11 @@ int \mbox{\hyperlink{pennos_8c_a3c04138a5bfe5d72780bb7e82a18e627}{main}} (int ar
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
 {\footnotesize\ttfamily int main (\begin{DoxyParamCaption}\item[{int}]{argc,  }\item[{char \texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}}]{argv }\end{DoxyParamCaption})}
 
-\Hypertarget{pennos_8c_a9fa00b0be5d3c4781048861e2506eb63}\label{pennos_8c_a9fa00b0be5d3c4781048861e2506eb63} 
+\Hypertarget{pennos_8c_a9e5f6827ba0dd8849e892ef8f2187386}\label{pennos_8c_a9e5f6827ba0dd8849e892ef8f2187386} 
 \index{pennos.c@{pennos.c}!scheduler@{scheduler}}
 \index{scheduler@{scheduler}!pennos.c@{pennos.c}}
 \doxysubsubsection{\texorpdfstring{scheduler()}{scheduler()}}
-{\footnotesize\ttfamily void scheduler (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void scheduler (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{logfile }\end{DoxyParamCaption})}
 
 
 
